@@ -1,28 +1,31 @@
 TODO: 
-# rdump util:
+# rdup util:
 o ignore or handle signals
 o better error handling on syscalls?
 o include the filesize in the output too? I have it internally (from
   lstat)
 o make it more efficient, GSList is not the quickest
   data type from GLib. Performance/scalability.
+  Switch to a tree type.
 
 # rest/shell 
 o make install/unstall targets need to be finished
 o look into networking (for an example script, that is)
 o shell script portability
 
-DONE:
+
+PARTLY DONE:
 o consolidate shell script, write generic functions that can 
   by sourced and used.
   26 Dec 2006
 
 o -0 is not yet implemented
-  rdump filelist is \n delimited, as you cannot parse nulls with scanf
+  rdup filelist is \n delimited, as you cannot parse nulls with scanf
   Our internal list is NEVER null delimited.
   26 Dec 2005
   
-o valgrind rdump. Done the remaining leaks look to be coming
+DONE:
+o valgrind rdup. Done the remaining leaks look to be coming
   from glib: (or I'm doing something stupid)
         ==9997== 38994 bytes in 40 blocks are still reachable in loss record 2 of 2
         ==9997==    at 0x1B8FF8A2: malloc (vg_replace_malloc.c:149)
@@ -30,8 +33,8 @@ o valgrind rdump. Done the remaining leaks look to be coming
         ==9997==    by 0x1B949EA5: g_strdup (in /usr/lib/libglib-2.0.so.0.800.3)
         ==9997==    by 0x1B93A77E: g_allocator_new (in /usr/lib/libglib-2.0.so.0.800.3)
         ==9997==    by 0x1B9493AF: g_slist_prepend (in /usr/lib/libglib-2.0.so.0.800.3)
-        ==9997==    by 0x8049371: g_slist_read_file (rdump.c:102)
-        ==9997==    by 0x8049574: main (rdump.c:179)
+        ==9997==    by 0x8049371: g_slist_read_file (rdup.c:102)
+        ==9997==    by 0x8049574: main (rdup.c:179)
 
         ....
         ==9997== LEAK SUMMARY:
