@@ -23,4 +23,4 @@ Alternate backup directory. Defaults to /vol/backup/`hostname`.
 the backup file system.
 
 .SH SEE ALSO
-diff(1), hist.sh (1), rdump(8)
+diff(1), hist.sh (1), rdup(8)
