@@ -49,4 +49,4 @@ location.
 This manpage was copied verbatim from the hist(1) manual page of Plan9.
 
 .SH SEE ALSO
-yesterday.sh(1), rdump(8)
+yesterday.sh(1), rdup(8)
