@@ -1,8 +1,8 @@
-.TH RDUMP 8 "24 Dec 2005"
+.TH RDUP 8 "24 Dec 2005"
 .SH NAME
-rdump \- generate a file list suitable for making backups
+rdup \- generate a file list suitable for making backups
 .SH SYNOPSIS
-.B rdump
+.B rdup
 [
 .IR --hvVx0
 ]
@@ -10,16 +10,16 @@ rdump \- generate a file list suitable for making backups
 .IR DIRS ...
 
 .SH DESCRIPTION
-\fBrdump\fR is a utility inspired by rsync and the plan9 way of doing
-backups. \fBrdump\fR itself does not backup anything. All paths printed
+\fBrdup\fR is a utility inspired by rsync and the plan9 way of doing
+backups. \fBrdup\fR itself does not backup anything. All paths printed
 are absolute.
 .PP
-\fBrdump\fR prints a filelist to standard output. This list is relative
+\fBrdup\fR prints a filelist to standard output. This list is relative
 to FILELIST. Subsequent programs in a pipe line can be used to actually
 implement to backup scheme. If FILELIST is empty or non existant all
 files in DIR are dumped. This is the same as a null dump. After a run
 a new FILELIST is written. No warning is given when FILELIST is an
-existing file, it just gets overwritten by \fBrdump\fR. New runs will
+existing file, it just gets overwritten by \fBrdup\fR. New runs will
 print out only those files that have actually changed since the last
 run, thereby making incremental backups possible.
 .PP
@@ -28,7 +28,7 @@ if this time is NEWER than the m_time of FILELIST the pathname is printed
 to standard output. All errors are written to standard error.
 .PP
 The general idea is to be very unix like and create a bunch of simple programs
-which each do a their specific thing very well. With \fBrdump\fR and a
+which each do a their specific thing very well. With \fBrdup\fR and a
 small shell script (50 lines) one can implement encrypted and compressed
 backups.
 
@@ -45,7 +45,7 @@ printed to standard output.
 Be more verbose
 .TP
 \fB\-V
-Print rdump's version.
+Print rdup's version.
 .TP
 \fB\-x
 Stay on the local filesystem.
@@ -55,15 +55,15 @@ Delimit all printed lists with NULL instead of newlines. This does not
 apply to the FILELIST.
 
 .SH FILELIST
-\fBrdump\fR write the FILELIST in the following format:
+\fBrdup\fR write the FILELIST in the following format:
         MODE PATH
 .PP
 Where MODE is the st_mode from stat(2) and PATH is the path of the file. A
 typical example is: 
-        33216 bin/rdump
+        33216 bin/rdup
 
 .SH OUTPUT
-The output generated by \fBrdump\fR is formatted like:
+The output generated by \fBrdup\fR is formatted like:
         +|-MODE UID GID PATH
 .PP
 Where:
@@ -84,7 +84,7 @@ the numerical group id of PATH
 the pathname
 .PP
 A typical example look like this:
-        +33216 1000 1000 bin/rdump
+        +33216 1000 1000 bin/rdup
 .PP
 Directories are always printed, as the modification time of directories
 is not compared.
@@ -101,4 +101,4 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR
 PURPOSE.
 .PP
 Licensed under the GPL. See the file LICENSE in the source distribution
-of rdump.
+of rdup.
