@@ -1,5 +1,5 @@
-#ifndef _RDUMP_H
-#define _RDUMP_H
+#ifndef _RDUP_H
+#define _RDUP_H
 
 #define VERSION     "@PACKAGE_VERSION@"
 #define PROGNAME    "@PACKAGE_NAME@"
@@ -11,6 +11,7 @@
 #define NULL_DUMP       0
 #define INC_DUMP        1
 #define DIR_SEP         '/'
+#define VALUE           (void*)1 /* g_tree_lookup return this in rdup */
 
 struct entry {
         char *f_name;
@@ -20,4 +21,20 @@ struct entry {
         time_t f_mtime;
 };
 
-#endif  /* _RDUMP_H */
+struct substract {
+        GTree *d; /* diff */
+        GTree *b;
+};
+
+/* gfunc.c */
+gboolean gfunc_free(gpointer data, gpointer value, gpointer usr);
+gboolean gfunc_write(gpointer data, gpointer value, gpointer fp);
+gboolean gfunc_backup(gpointer data, gpointer value, gpointer usr);
+gboolean gfunc_remove(gpointer data, gpointer value, gpointer usr);
+gboolean gfunc_substract(gpointer data, gpointer value, gpointer diff);
+gboolean gfunc_equal(gconstpointer a, gconstpointer b);
+#ifndef NDEBUG
+gboolean gfunc_write_all(gpointer data, gpointer value, gpointer fp);
+#endif /* NDEBUG */
+
+#endif  /* _RDUP_H */
