@@ -51,4 +51,4 @@ This manpage was copied verbatim from the yesterday(1) manual page of
 Plan9.
 
 .SH SEE ALSO
-diff(1), hist.sh (1), rdump(8)
+diff(1), hist.sh (1), rdup(8)
